# hyperelastic

./: .readthedocs.yml  CITATION.cff  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  upload-codecov.yml
docs/: conf.py  hyperelastic.rst  index.rst  make_api.bat  tutorial.rst
docs/_static/: switcher.json
docs/hyperelastic/: frameworks.rst  global.rst  lab.rst  math.rst  models.rst
docs/hyperelastic/global/: frameworks.rst  math.rst  models.rst  spaces.rst
docs/tutorial/: getting_started.rst
src/hyperelastic/: __init__.py
src/hyperelastic/frameworks/: __init__.py  _generalized.py  _invariants.py  _stretches.py
src/hyperelastic/isotropic/: __init__.py  _framework.py  _framework_invariants.py  _framework_stretches.py
src/hyperelastic/isotropic/invariants/: __init__.py  _framework.py  _polynomial.py
src/hyperelastic/isotropic/models/: __init__.py
src/hyperelastic/lab/: __init__.py  _curve_fit.py  _experiment.py  _load_case.py  _optimize.py  _plotting.py  _simulation.py
src/hyperelastic/math/: __init__.py  _parallel.py  _voigt.py
src/hyperelastic/models/: __init__.py
src/hyperelastic/models/generalized/: __init__.py  _stretch.py
src/hyperelastic/models/invariants/: __init__.py  _third_order_deformation.py  _torch.py
src/hyperelastic/models/stretches/: __init__.py  _deformation.py  _generalized_invariants.py  _ogden.py  _strain.py
src/hyperelastic/spaces/: __init__.py  _deformation.py  _dilatational.py  _distortional.py  _space.py
tests/: test_finalize.py  test_generalized.py  test_lab.py  test_lab_simple.py  test_math.py  test_simulation.py  test_space.py  test_sympy.py  test_torch.py
(+3 files in other folders)
