[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "hyperelastic"
authors = [
  {email = "a.dutzler@gmail.com"},
  {name = "Andreas Dutzler"}
]
description = "Constitutive hyperelastic material formulations for FElupe"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "constitution",
  "scientific-computing",
  "fem",
  "finite-elements-analysis",
  "hyperelasticity", 
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Utilities"
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
    "felupe",
    "sympy",
]

[tool.setuptools.dynamic]
version = {attr = "hyperelastic.__about__.__version__"}

[project.urls]
Homepage = "https://github.com/adtzlr/hyperelastic"
Code = "https://github.com/adtzlr/hyperelastic"
Issues = "https://github.com/adtzlr/hyperelastic/issues"
